--- a/serrano_tsa3.html
+++ b/serrano_tsa3.html
@@ -105,42 +105,108 @@
             <tr>
                 <td>872</td>
                 <td>Generation 8</td>
-                <td>Phantump</td>
+                <td>Snom</td>
                 <td><img src="https://img.pokemondb.net/sprites/home/normal/2x/avif/snom.avif"></td>
-                <td bgcolor="">Ice</td>
-                <td bgcolor="darkgreen">Bug</td>
+                <td bgcolor="#93ccea">Ice</td>
+                <td bgcolor="#b2ec5d">Bug</td>
                 <td>-</td>
-                <td>Trevenant</td>
-                <td>ghostree</td>
+                <td>Frostmoth</td>
+                <td>snowflake</td>
                 <td>09-05-2024</td>
 
             </tr>
 
             <tr>
-                <td>708</td>
-                <td>Generation 6</td>
-                <td>Phantump</td>
-                <td><img src="https://img.pokemondb.net/sprites/home/normal/2x/avif/phantump.avif"></td>
-                <td bgcolor="grey">Ghost</td>
-                <td bgcolor="darkgreen">Grass</td>
+                <td>276</td>
+                <td>Generation 3</td>
+                <td>Taillow</td>
+                <td><img src="https://img.pokemondb.net/sprites/home/normal/2x/avif/taillow.avif"></td>
+                <td bgcolor="lightgrey">Normal</td>
+                <td bgcolor="lightblue">Flying</td>
                 <td>-</td>
-                <td>Trevenant</td>
-                <td>ghostree</td>
+                <td>Swellow</td>
+                <td>wailey</td>
                 <td>09-05-2024</td>
 
             </tr>
 
             <tr>
-                <td>708</td>
-                <td>Generation 6</td>
-                <td>Phantump</td>
-                <td><img src="https://img.pokemondb.net/sprites/home/normal/2x/avif/phantump.avif"></td>
-                <td bgcolor="grey">Ghost</td>
-                <td bgcolor="darkgreen">Grass</td>
+                <td>261</td>
+                <td>Generation 3</td>
+                <td>Poochyena</td>
+                <td><img src="https://img.pokemondb.net/sprites/home/normal/2x/avif/poochyena.avif"></td>
+                <td colspan="2" bgcolor="#660066">Dark</td>
                 <td>-</td>
-                <td>Trevenant</td>
-                <td>ghostree</td>
+                <td>Mightyena</td>
+                <td>wolyena</td>
                 <td>09-05-2024</td>
+
+            </tr>
+
+            <tr>
+                <td>294</td>
+                <td>Generation 3</td>
+                <td>Loudred</td>
+                <td><img src="https://img.pokemondb.net/sprites/home/normal/2x/avif/loudred.avif"></td>
+                <td colspan="2" bgcolor="lightgrey">Normal</td>
+                <td>-</td>
+                <td>Exploud</td>
+                <td>exloud</td>
+                <td>09-05-2024</td>
+
+            </tr>
+
+            <tr>
+                <td>39</td>
+                <td>Generation 1</td>
+                <td>JIgglypuff</td>
+                <td><img src="https://img.pokemondb.net/sprites/home/normal/2x/avif/jigglypuff.avif"></td>
+                <td bgcolor="lightgrey">Normal</td>
+                <td bgcolor="lightpink">Fairy</td>
+                <td>-</td>
+                <td>Wigglytuff</td>
+                <td>jiggie</td>
+                <td>09-05-2024</td>
+
+            </tr>
+
+            <tr>
+                <td>501</td>
+                <td>Generation 5</td>
+                <td>Oshawott</td>
+                <td><img src="https://img.pokemondb.net/sprites/home/normal/2x/avif/oshawott.avif"></td>
+                <td colspan="2" bgcolor="#0040ff">Water</td>
+                <td>-</td>
+                <td>Dewott</td>
+                <td>Pengwott</td>
+                <td>09-05-2024</td>
+
+            </tr>
+
+            <tr>
+                <td>170</td>
+                <td>Generation 2</td>
+                <td>Chinchou</td>
+                <td><img src="https://img.pokemondb.net/sprites/home/normal/2x/avif/sentret.avif"></td>
+                <td colspan="2" bgcolor="lightgrey">Normal</td>
+                <td>-</td>
+                <td>Lanturn</td>
+                <td>watric</td>
+                <td>09-05-2024</td>
+
+            </tr>
+
+            <tr>
+                <td>1122</td>
+                <td>Generation 9</td>
+                <td>Klyn</td>
+                <td><img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/438267749_1581119266009131_5340512339418563015_n.jpg?stp=dst-jpg_p320x320&_nc_cat=101&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeGYfczVywfjze8ZAN6W3OA-B8ERnFy84GIHwRGcXLzgYm2y1gma7PNPCyUi9zHO3skLEa5WfPkuUPzD-9JBZUOR&_nc_ohc=AkbQpvj9680Q7kNvgHfZvFE&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_Q7cD1QEHKy2NIl5wZzfvZPRWi7AYKYa9-qoFutK2MaUMcZ0jng&oe=66653ADA"></td>
+                <td bgcolor="#ffff4d">Light</td>
+                <td bgcolor="#660066">Dark</td>
+                <td>-</td>
+                <td>Quincy</td>
+                <td>Klyshi</td>
+                <td>22-11-2004</td>
 
             </tr>
 
