--- a/serrano_tsa3.html
+++ b/serrano_tsa3.html
@@ -93,7 +93,7 @@
                 <td>704</td>
                 <td>Generation 6</td>
                 <td>Goomy</td>
-                <td><img src="goomy.avif"></td>
+                <td><img src="goomy.jpeg"></td>
                 <td colspan="2" bgcolor="#FD176E">Dragon</td>
                 <td>-</td>
                 <td>Sliggoo</td>
@@ -106,7 +106,7 @@
                 <td>872</td>
                 <td>Generation 8</td>
                 <td>Snom</td>
-                <td><img src="snom.avif"></td>
+                <td><img src="snom.jpeg"></td>
                 <td bgcolor="#93ccea">Ice</td>
                 <td bgcolor="#b2ec5d">Bug</td>
                 <td>-</td>
@@ -120,7 +120,7 @@
                 <td>276</td>
                 <td>Generation 3</td>
                 <td>Taillow</td>
-                <td><img src="taillow.avif"></td>
+                <td><img src="taillow.jpeg"></td>
                 <td bgcolor="lightgrey">Normal</td>
                 <td bgcolor="lightblue">Flying</td>
                 <td>-</td>
@@ -134,7 +134,7 @@
                 <td>261</td>
                 <td>Generation 3</td>
                 <td>Poochyena</td>
-                <td><img src="poochyena.avif"></td>
+                <td><img src="poochyena.jpeg"></td>
                 <td colspan="2" bgcolor="#660066">Dark</td>
                 <td>-</td>
                 <td>Mightyena</td>
@@ -147,7 +147,7 @@
                 <td>294</td>
                 <td>Generation 3</td>
                 <td>Loudred</td>
-                <td><img src="loudred.avif"></td>
+                <td><img src="loudred.jpeg"></td>
                 <td colspan="2" bgcolor="lightgrey">Normal</td>
                 <td>-</td>
                 <td>Exploud</td>
@@ -160,7 +160,7 @@
                 <td>39</td>
                 <td>Generation 1</td>
                 <td>JIgglypuff</td>
-                <td><img src="jigglypuff.avif"></td>
+                <td><img src="jigglypuff.jpeg"></td>
                 <td bgcolor="lightgrey">Normal</td>
                 <td bgcolor="lightpink">Fairy</td>
                 <td>-</td>
@@ -174,7 +174,7 @@
                 <td>501</td>
                 <td>Generation 5</td>
                 <td>Oshawott</td>
-                <td><img src="oshawott.avif"></td>
+                <td><img src="oshawott.jpeg"></td>
                 <td colspan="2" bgcolor="#0040ff">Water</td>
                 <td>-</td>
                 <td>Dewott</td>
@@ -187,7 +187,7 @@
                 <td>170</td>
                 <td>Generation 2</td>
                 <td>Chinchou</td>
-                <td><img src="chinchou.avif"></td>
+                <td><img src="chinchou.jpeg"></td>
                 <td colspan="2" bgcolor="lightgrey">Normal</td>
                 <td>-</td>
                 <td>Lanturn</td>
@@ -200,7 +200,7 @@
                 <td>708</td>
                 <td>Generation 6</td>
                 <td>Phantump</td>
-                <td><img src="phantump.avif"></td>
+                <td><img src="phantump.jpeg"></td>
                 <td bgcolor="grey">Ghost</td>
                 <td bgcolor="darkgreen">Grass</td>
                 <td>-</td>
